--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "6.4.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34",
     "yup": "0.32.11"
   },
   "scripts": {
