--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nivo/geo": "0.80.0",
     "@nivo/line": "0.80.0",
     "@nivo/pie": "0.80.0",
+    "@react-three/fiber": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,8 +27,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "1.0.0-alpha.7",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "6.4.3",
     "react-scripts": "^5.0.1",
+    "three": "^0.153.0",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34",
     "yup": "0.32.11"
